@@ -1,3 +1,4 @@
+* Improve account tree creation
 * Remove name, journal, reference, party and active from line
 * Remove currency from account
 * Require company on account
